# fantasy1

./: .env.example  .gitignore  CEO_STRATEGIC_REVIEW_20260324.md  CLAUDE.md  DESIGN.md  ENG_REVIEW_20260324.md  TODOS.md  docker-compose.yml  fly.toml  기술스택_TECH_STACK.md  청월당_사이트_분석_리포트_20260323.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-web.yml
app/: pubspec.yaml
app/lib/: main.dart
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_users.sql  002_orders.sql  003_saju_profiles.sql  004_saju_cards.sql  005_consultations.sql  006_chat_messages.sql  007_daily_fortunes.sql  008_compatibility.sql  009_share_links.sql  010_rate_limits.sql  011_refresh_tokens.sql  012_compatibility_encrypt.sql
backend/src/: errors.rs  main.rs  state.rs
backend/src/api/: auth.rs  fortune.rs  health.rs  helpers.rs  mod.rs  payment.rs  profile.rs  saju.rs  share.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  social.rs
backend/src/models/: birth.rs  consultation.rs  fortune.rs  mod.rs  payment.rs  saju.rs  user.rs
backend/src/saju/: analysis.rs  engine.rs  interpreter.rs  mod.rs
backend/src/saju/tables/: earthly_branches.rs  heavenly_stems.rs  lunar_calendar.rs  lunar_data_1940_2019.rs  mod.rs  solar_terms.rs
backend/src/services/: cache.rs  claude.rs  crypto.rs  mod.rs  nanobanana.rs  revenuecat.rs
docs/: app-store-submission-checklist.md
shared/contracts/: api-schema.json
shared/design-tokens/: tokens.json
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: Footer.tsx  (+4 more)
(+64 files in other folders)
