[package]
name = "saju-backend"
version = "0.1.0"
edition = "2021"
authors = ["Saju Team"]
description = "AI 사주 상담 플랫폼 Backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# HTTP client (external APIs)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Crypto (HMAC for cache keys, AES for PII)
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# Rate limiting
governor = "0.6"

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
axum-test = "0.3"
